--- a/package.json
+++ b/package.json
@@ -5,16 +5,23 @@
   "author": "an-ger",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server --exec babel-node",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production node server/index.js --exec babel-node",
     "generate": "nuxt generate"
   },
   "dependencies": {
-    "nuxt": "^2.0.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "cross-env": "^5.2.0",
+    "element-ui": "^2.4.11",
+    "fibers": "^5.0.0",
     "koa": "^2.6.2",
-    "element-ui": "^2.4.11"
+    "node-sass": "^4.14.1",
+    "nuxt": "^2.0.0",
+    "sass": "^1.26.8",
+    "sass-loader": "^8.0.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
